--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,8 +1,25 @@
-<div class="card border-secondary mb-3" style="width: 18rem;">
-  <img class="card-img-top" [src]="product.photo_url | safe" alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title">{{product.name}}</h5>
-    <p class="card-text">{{product.description}}</p>
-    <button type="button" class="btn btn-danger" (click)="deleteProduct(product)">Delete</button>
+<!--<div class="card border-secondary mb-3" style="width: 18rem;">-->
+  <!--<img class="card-img-top" [src]="product.photo_url | safe" alt="Card image cap">-->
+  <!--<div class="card-body">-->
+    <!--<h5 class="card-title">{{product.name}}</h5>-->
+    <!--<p class="card-text">{{product.description}}</p>-->
+    <!--<button type="button" class="btn btn-danger" (click)="deleteProduct(product)">Delete</button>-->
+  <!--</div>-->
+<!--</div>-->
+
+<div>
+  <div class="card h-100">
+    <a href="#"><img class="card-img-top" [src]="product.photo_url | safe" alt="http://placehold.it/700x400"></a>
+    <div class="card-body">
+      <h4 class="card-title">
+        <a href="#">{{product.name}}</a>
+      </h4>
+      <h5>{{product.price}}$</h5>
+      <p class="card-text">{{product.description}}</p>
+      <button type="button" class="btn btn-danger" (click)="deleteProduct(product)">Delete</button>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+    </div>
   </div>
 </div>
