--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,27 @@
-
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="#">ZPW 2018</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" routerLink="/" routerLinkActive="active">ZPW 2018</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+            aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home
+          <a class="nav-link" routerLink="/" routerLinkActive="active">Home
             <span class="sr-only">(current)</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" routerLink="/new-product" routerLinkActive="active">New Product</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Services</a>
+          <button type="button" class="btn btn-info btn-sm" routerLink="/shopping-cart" routerLinkActive="active">
+            <span class="fa fa-shopping-cart"></span> Shopping Cart
+          </button>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
-        </li>
+
       </ul>
     </div>
   </div>
@@ -46,35 +46,35 @@
 
     <div class="col-lg-9">
 
-      <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner" role="listbox">
-          <div class="carousel-item active">
-            <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="First slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Second slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Third slide">
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
+      <!--<div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">-->
+      <!--<ol class="carousel-indicators">-->
+      <!--<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>-->
+      <!--<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>-->
+      <!--<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>-->
+      <!--</ol>-->
+      <!--<div class="carousel-inner" role="listbox">-->
+      <!--<div class="carousel-item active">-->
+      <!--<img class="d-block img-fluid" src="http://placehold.it/900x350" alt="First slide">-->
+      <!--</div>-->
+      <!--<div class="carousel-item">-->
+      <!--<img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Second slide">-->
+      <!--</div>-->
+      <!--<div class="carousel-item">-->
+      <!--<img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Third slide">-->
+      <!--</div>-->
+      <!--</div>-->
+      <!--<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">-->
+      <!--<span class="carousel-control-prev-icon" aria-hidden="true"></span>-->
+      <!--<span class="sr-only">Previous</span>-->
+      <!--</a>-->
+      <!--<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">-->
+      <!--<span class="carousel-control-next-icon" aria-hidden="true"></span>-->
+      <!--<span class="sr-only">Next</span>-->
+      <!--</a>-->
+      <!--</div>-->
 
-
-      <app-products></app-products>
+      <router-outlet></router-outlet>
+      <!--<app-products></app-products>-->
       <!-- /.row -->
 
     </div>
