--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,10 +1,10 @@
 <!--<div class="card border-secondary mb-3" style="width: 18rem;">-->
-  <!--<img class="card-img-top" [src]="product.photo_url | safe" alt="Card image cap">-->
-  <!--<div class="card-body">-->
-    <!--<h5 class="card-title">{{product.name}}</h5>-->
-    <!--<p class="card-text">{{product.description}}</p>-->
-    <!--<button type="button" class="btn btn-danger" (click)="deleteProduct(product)">Delete</button>-->
-  <!--</div>-->
+<!--<img class="card-img-top" [src]="product.photo_url | safe" alt="Card image cap">-->
+<!--<div class="card-body">-->
+<!--<h5 class="card-title">{{product.name}}</h5>-->
+<!--<p class="card-text">{{product.description}}</p>-->
+<!--<button type="button" class="btn btn-danger" (click)="deleteProduct(product)">Delete</button>-->
+<!--</div>-->
 <!--</div>-->
 
 <div>
@@ -19,7 +19,15 @@
       <button type="button" class="btn btn-danger" (click)="deleteProduct(product)">Delete</button>
     </div>
     <div class="card-footer">
-      <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+      <div class="row">
+        <small class="text-muted">{{product.products_quantity}}</small>
+        <button type="button" class="btn btn-labeled btn-success btn-sm">
+          <i class="fa fa-plus"></i>
+        </button>
+        <button type="button" class="btn btn-labeled btn-danger btn-sm">
+          <i class="fa fa-minus"></i>
+        </button>
+      </div>
     </div>
   </div>
 </div>
