--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,3 +1,7 @@
-<p>
-  shopping-cart works!
-</p>
+<div class="row">
+  <div class="offset-lg-3 col-lg-9">
+    <p>
+      shopping-cart works!
+    </p>
+  </div>
+</div>
