--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,18 +1,22 @@
 <div class="row">
   <div class="col-lg-3">
     <h1 class="my-4">Products</h1>
-    <div class="list-group">
-      <a href="#" class="list-group-item">Category 1</a>
-      <a href="#" class="list-group-item">Category 2</a>
-      <a href="#" class="list-group-item">Category 3</a>
-    </div>
+    <app-filters (checkedCategoriesEvent)="onCheckedCategories($event)"></app-filters>
   </div>
 
   <div class="col-lg-9">
     <div class="row">
-      <app-product class="col-lg-4 col-md-6 mb-4" [product]="p" *ngFor="let p of products"
-                   (deleteProductEvent)="onDeleteProduct($event)">
+      <app-product class="col-lg-4 col-md-6 mb-4" [product]="p"
+                   *ngFor="let p of products | categories: checkedCategories | paginate: { itemsPerPage: 6, currentPage: currentPageNumber }"
+                   (deleteProductEvent)="onDeleteProduct($event)"
+                   (deleteProductFromShoppingCartEvent)="onDeleteFromShoppingCart($event)"
+                   (addProductToShoppingCartEvent)="onAddToShoppingCart($event)">
       </app-product>
+    </div>
+    <div class="row ">
+      <div class="mx-auto">
+        <pagination-controls (pageChange)="pageChanged($event)"></pagination-controls>
+      </div>
     </div>
   </div>
 </div>
