--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,7 +1,58 @@
 <div class="row">
   <div class="offset-lg-3 col-lg-9">
-    <p>
-      shopping-cart works!
-    </p>
+    <table class="table table-hover">
+      <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Product</th>
+        <th scope="col">Unit Price</th>
+        <th scope="col">Value</th>
+        <th scope="col"></th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let item of cartItems | keyvalue">
+        <td>{{item.value.products_quantity}}</td>
+        <td>{{item.value.name}}</td>
+        <td>{{item.value.price}}$</td>
+        <td>{{item.value.products_quantity * item.value.price}}$</td>
+        <td>
+          <button type="button" class="btn btn-labeled btn-success float-right btn-sm"
+                  (click)="addProductToShoppingCart(item.value)">
+            <i class="fa fa-plus"></i>
+          </button>
+          <button type="button" class="btn btn-labeled btn-danger float-right btn-sm "
+                  (click)="deleteProductFromShoppingCart(item.value)">
+            <i class="fa fa-minus"></i>
+          </button>
+        </td>
+      </tr>
+      <!--<tr>-->
+      <!--<th scope="row">1</th>-->
+      <!--<td>Mark</td>-->
+      <!--<td>Otto</td>-->
+      <!--<td>@mdo</td>-->
+      <!--</tr>-->
+      <!--<tr>-->
+      <!--<th scope="row">2</th>-->
+      <!--<td>Jacob</td>-->
+      <!--<td>Thornton</td>-->
+      <!--<td>@fat</td>-->
+      <!--</tr>-->
+      <!--<tr>-->
+      <!--<th scope="row">3</th>-->
+      <!--<td colspan="2">Larry the Bird</td>-->
+      <!--<td>@twitter</td>-->
+      <!--</tr>-->
+      </tbody>
+      <tfoot>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Total value: {{getTotalValue()}}$</td>
+      </tr>
+      </tfoot>
+    </table>
   </div>
 </div>
