--- a/src/app/filters/filters.component.html
+++ b/src/app/filters/filters.component.html
@@ -8,11 +8,15 @@
         <div class="form-row">
           <div class="form-group col-md-6">
             <label>Min</label>
-            <input type="number" class="form-control" id="inputEmail4" placeholder="$0">
+            <input type="number" class="form-control" id="minPrice" placeholder="$0"
+                   [(ngModel)]="minPrice"
+                   (change)="priceRangeChanged(minPrice, maxPrice)">
           </div>
           <div class="form-group col-md-6 text-right">
             <label>Max</label>
-            <input type="number" class="form-control" placeholder="$1,0000">
+            <input type="number" class="form-control" id="maxPrice" placeholder="$100"
+                   [(ngModel)]="maxPrice"
+                   (change)="priceRangeChanged(minPrice, maxPrice)">
           </div>
         </div>
       </div>
