--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,13 +1,15 @@
 <div class="row">
   <div class="col-lg-3">
     <h1 class="my-4">Products</h1>
-    <app-filters (checkedCategoriesEvent)="onCheckedCategories($event)"></app-filters>
+    <app-filters (checkedCategoriesEvent)="onCheckedCategories($event)"
+                 (priceRangeChangedEvent)="onPriceRangeChange($event)">
+    </app-filters>
   </div>
 
   <div class="col-lg-9">
     <div class="row">
       <app-product class="col-lg-4 col-md-6 mb-4" [product]="p"
-                   *ngFor="let p of products | categories: checkedCategories | paginate: { itemsPerPage: 6, currentPage: currentPageNumber }"
+                   *ngFor="let p of products | categories: checkedCategories | price_range: priceRange | paginate: { itemsPerPage: 6, currentPage: currentPageNumber }"
                    (deleteProductEvent)="onDeleteProduct($event)"
                    (deleteProductFromShoppingCartEvent)="onDeleteFromShoppingCart($event)"
                    (addProductToShoppingCartEvent)="onAddToShoppingCart($event)">
