--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -14,7 +14,7 @@
       <tr *ngFor="let item of cartItems | keyvalue">
         <td>{{item.value.products_quantity}}</td>
         <td>{{item.value.name}}</td>
-        <td>{{item.value.price}}$</td>
+        <td>{{item.value.price | currency:'USD':'symbol':'.2-4'}}</td>
         <td>{{item.value.products_quantity * item.value.price}}$</td>
         <td>
           <button type="button" class="btn btn-labeled btn-success float-right btn-sm"
@@ -27,23 +27,6 @@
           </button>
         </td>
       </tr>
-      <!--<tr>-->
-      <!--<th scope="row">1</th>-->
-      <!--<td>Mark</td>-->
-      <!--<td>Otto</td>-->
-      <!--<td>@mdo</td>-->
-      <!--</tr>-->
-      <!--<tr>-->
-      <!--<th scope="row">2</th>-->
-      <!--<td>Jacob</td>-->
-      <!--<td>Thornton</td>-->
-      <!--<td>@fat</td>-->
-      <!--</tr>-->
-      <!--<tr>-->
-      <!--<th scope="row">3</th>-->
-      <!--<td colspan="2">Larry the Bird</td>-->
-      <!--<td>@twitter</td>-->
-      <!--</tr>-->
       </tbody>
       <tfoot>
       <tr>
