--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,27 +6,29 @@
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" routerLink="/" routerLinkActive="active">Home
-            <span class="sr-only">(current)</span>
-          </a>
-        </li>
+    <div class="collapse navbar-collapse" id="navbarLeftResponsive">
+      <ul class="navbar-nav mr-auto">
         <li class="nav-item">
           <a class="nav-link" routerLink="/new-product" routerLinkActive="active">New Product</a>
         </li>
+      </ul>
+    </div>
+    <div class="collapse navbar-collapse" id="navbarRightResponsive">
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <button type="button" class="btn btn-info btn-sm" routerLink="/shopping-cart" routerLinkActive="active">
             <span class="fa fa-shopping-cart"></span> Shopping Cart
           </button>
         </li>
-
       </ul>
     </div>
   </div>
 </nav>
-
+<div *ngIf="orderId" class="alert alert-success" role="alert">
+  <button type="button" class="close" (click)="removeAlert()"><span aria-hidden="true">×</span><span class="sr-only">Close</span>
+  </button>
+  Order successfully submitted!
+</div>
 <!-- Page Content -->
 <div class="container">
   <router-outlet></router-outlet>
