--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,43 +1,3 @@
-<!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-  <div class="container">
-    <a class="navbar-brand" routerLink="/" routerLinkActive="active">ZPW 2018</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-            aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarLeftResponsive">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/new-product" routerLinkActive="active">New Product</a>
-        </li>
-      </ul>
-    </div>
-    <div class="collapse navbar-collapse" id="navbarRightResponsive">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <button type="button" class="btn btn-info btn-sm" routerLink="/shopping-cart" routerLinkActive="active">
-            <span class="fa fa-shopping-cart"></span> Shopping Cart
-          </button>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-<div *ngIf="orderId" class="alert alert-success" role="alert">
-  <button type="button" class="close" (click)="removeAlert()"><span aria-hidden="true">×</span><span class="sr-only">Close</span>
-  </button>
-  Order successfully submitted!
-</div>
-<!-- Page Content -->
-<div class="container">
+<div>
   <router-outlet></router-outlet>
 </div>
-
-<!-- Footer -->
-<footer class="py-5 bg-dark">
-  <div class="container">
-    <p class="m-0 text-center text-white">Copyright &copy; ZPW 2018</p>
-  </div>
-</footer>
-
