--- a/src/app/edit-product/edit-product.component.html
+++ b/src/app/edit-product/edit-product.component.html
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="offset-lg-3 col-lg-9">
     <div class="container">
-      <h1>New Product</h1>
-      <form (ngSubmit)="onSubmit()" #newProductForm="ngForm">
+      <h1>Edit Product</h1>
+      <form (ngSubmit)="onSubmit()" #editProductForm="ngForm">
         <div class="form-group">
           <label for="name">Name</label>
           <input type="text" class="form-control" id="name"
                  required
-                 [(ngModel)]="model.name" name="name"
+                 [(ngModel)]="product.name" name="name"
                  #name="ngModel">
           <div [hidden]="name.valid || name.pristine"
                class="alert alert-danger">
@@ -19,7 +19,7 @@
           <label for="price">Price</label>
           <input type="number" min="0" class="form-control" id="price"
                  required
-                 [(ngModel)]="model.price" name="price"
+                 [(ngModel)]="product.price" name="price"
                  #price="ngModel">
           <div [hidden]="price.valid || price.pristine"
                class="alert alert-danger">
@@ -31,7 +31,7 @@
           <label for="quantity">Quantity</label>
           <input type="number" min="0" class="form-control" id="quantity"
                  required
-                 [(ngModel)]="model.products_quantity" name="quantity"
+                 [(ngModel)]="product.products_quantity" name="quantity"
                  #quantity="ngModel">
           <div [hidden]="quantity.valid || quantity.pristine"
                class="alert alert-danger">
@@ -42,26 +42,26 @@
         <div class="form-group">
           <label for="desc">Description</label>
           <input type="text" class="form-control" id="desc"
-                 [(ngModel)]="model.description" name="desc">
+                 [(ngModel)]="product.description" name="desc">
         </div>
 
         <div class="form-group">
           <label for="photo_url">Picture url</label>
           <input type="text" class="form-control" id="photo_url"
-                 [(ngModel)]="model.photo_url" name="photo_url">
+                 [(ngModel)]="product.photo_url" name="photo_url">
         </div>
 
         <div class="form-group">
           <label for="category">Category</label>
           <select class="form-control" id="category" required>
-            <option *ngFor="let c of categories" [selected]="c.id === 'other'" [value]="c.id">{{c.label}}</option>
+            <option *ngFor="let c of categories" [selected]="c.id === product.category" [value]="c.id">{{c.label}}</option>
           </select>
 
         </div>
 
-        <button type="button" class="btn btn-success" [disabled]="!newProductForm.form.valid" (click)="onSubmit()"
+        <button type="button" class="btn btn-primary" [disabled]="!editProductForm.form.valid" (click)="onSubmit()"
                 routerLink="/admin" routerLinkActive="active">
-          Add product
+          Edit product
         </button>
       </form>
     </div>
