--- a/src/app/management-panel/management-panel.component.html
+++ b/src/app/management-panel/management-panel.component.html
@@ -8,18 +8,19 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarLeftResponsive">
       <ul class="navbar-nav mr-auto">
-        <li *ngIf="isEmployee" class="nav-item">
-          <a class="nav-link" routerLink="/admin" routerLinkActive="active">Administrator Panel</a>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/admin" routerLinkActive="active">Orders</a>
+        </li>
+        <li *ngIf="isAdmin" class="nav-item">
+          <a class="nav-link" routerLink="/admin/products" routerLinkActive="active">Products</a>
+        </li>
+        <li *ngIf="isAdmin" class="nav-item">
+          <a class="nav-link" routerLink="/admin/new-product" routerLinkActive="active">New Product</a>
         </li>
       </ul>
     </div>
     <div class="collapse navbar-collapse" id="navbarRightResponsive">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <button type="button" class="btn btn-info btn-sm" routerLink="/shopping-cart" routerLinkActive="active">
-            <span class="fa fa-shopping-cart"></span> Shopping Cart
-          </button>
-        </li>
         <li class="nav-item">
           <button type="button" class="btn btn-sm" (click)="logoutUser()">
             <span class="fa fa-sign-out"></span> Logout
@@ -29,11 +30,6 @@
     </div>
   </div>
 </nav>
-<div *ngIf="orderId" class="alert alert-success" role="alert">
-  <button type="button" class="close" (click)="removeAlert()"><span aria-hidden="true">×</span><span class="sr-only">Close</span>
-  </button>
-  Order successfully submitted!
-</div>
 <!-- Page Content -->
 <div class="container">
   <router-outlet></router-outlet>
