--- a/src/app/management-products/management-products.component.html
+++ b/src/app/management-products/management-products.component.html
@@ -4,7 +4,7 @@
     <table class="table table-hover">
       <thead>
       <tr>
-        <th scope="col">#</th>
+        <th scope="col">Quantity</th>
         <th scope="col">Product</th>
         <th scope="col">Price</th>
         <th scope="col">Category</th>
